CaseConnect/src/objects/V1Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>DateLastClosedAsset__c</fullName>
        <label>Last syncronization time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <externalId>true</externalId>
        <label>User Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1MemberId__c</fullName>
        <label>V1 Member Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1ProjectId__c</fullName>
        <label>VersionOne Project Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1ProjectName__c</fullName>
        <label>VersionOne Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1SourceId__c</fullName>
        <label>Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>VersionOne Settings</label>
</CustomObject>